# squirrel_engine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  run.bat
apps/: main.cpp
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: IndexBuffer.cpp  VertexBuffer.cpp  engine.cpp  main.cpp
src/include/: IndexBuffer.hpp  Test.hpp  VertexBuffer.hpp  engine.hpp
